2025-11-11T12:17:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19265338499 # 1299
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 13 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1263 6029 / 1277 6061
* notice: next accum: outdated-unq outdated-all / unq all: 1265 6033 / 1278 6062
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-28] / [2025-11-11]

2025-11-10T00:46:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19217145798 # 1296
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-10
* notice: last 14d: unq all: 14 32
* notice: prev accum: outdated-unq outdated-all / unq all: 1262 6028 / 1276 6060
* notice: next accum: outdated-unq outdated-all / unq all: 1263 6029 / 1277 6061
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-26] / [2025-11-09]

2025-11-09T00:46:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19200931397 # 1294
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-09
* notice: last 14d: unq all: 14 32
* notice: prev accum: outdated-unq outdated-all / unq all: 1260 6025 / 1276 6060
* notice: next accum: outdated-unq outdated-all / unq all: 1262 6028 / 1276 6060
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-25] / []

2025-11-08T00:40:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19185157807 # 1292