@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-11T12:17:41Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2025-11-12T00:44:35Z",
+  "count" : 6,
+  "count_minmax" : [ 1, 6 ],
+  "count_decinc" : [ -0, +6 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
