@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-11T12:17:41Z",
+  "timestamp" : "2025-11-12T00:44:35Z",
   "count_outdated" : 6033,
   "uniques_outdated" : 1265,
-  "count" : 6062,
-  "uniques" : 1278,
+  "count" : 6067,
+  "uniques" : 1279,
   "views" : [
     {
       "timestamp": "2025-10-29T00:00:00Z",
@@ -88,12 +88,12 @@
     },
     {
       "timestamp": "2025-11-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 6,
+      "count_minmax": [ 1, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
