@@ -1,6 +1,6 @@
 {
-  "count": 29,
-  "uniques": 13,
+  "count": 34,
+  "uniques": 14,
   "views": [
     {
       "timestamp": "2025-10-29T00:00:00Z",
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2025-11-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 6,
+      "uniques": 2
     }
   ]
 }
