@@ -1,3 +1,12 @@
+2025-11-12T00:44:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19282657272 # 1300
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
+* notice: last 14d: unq all: 14 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 1265 6033 / 1278 6062
+* notice: next accum: outdated-unq outdated-all / unq all: 1265 6033 / 1279 6067
+* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +2 +6 -0 -0 / 2 6
+* notice: removed / changed dates: [] / [2025-11-11]
+
 2025-11-11T12:17:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19265338499 # 1299
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
